# GIMPS

./: README.md
glucas-2.9.2/: AUTHORS  ChangeLog  ChangeLog.0  Makefile.am  Makefile.in  NEWS  README  config.guess  config.h.in  config.h.manual  config.sub  configure  configure.ac
glucas-2.9.2/PaxHeaders.15315/: AUTHORS  COPYING  ChangeLog  ChangeLog.0  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  compile  config.guess  config.h.in  config.h.manual  config.sub  configfsf.guess  configfsf.sub  configure  configure.ac  depcomp  doc  install-sh  missing  src
glucas-2.9.2/doc/: glucas.info  glucas.texi  glucas_main.html  glucas_main.html.es  gpl.texi  logo.texi  mformat.htm  mformat.texi  texi2dvi  version.texi
glucas-2.9.2/doc/PaxHeaders.15315/: glucas.info  glucas.texi  glucas_main.html  glucas_main.html.es  gpl.texi  logo.texi  mformat.htm  mformat.texi  texi2dvi  texinfo.tex  version.texi
glucas-2.9.2/src/: Glucas_test  Makefile.Glucas  Makefile.am  Makefile.in  cmpGlucas  compat.c  difdit_16.c  difdit_2.c  difdit_4.c  difdit_8.c  difditmm_4.c  difditmm_8.c  dyadic.c  dyadic32.c  fft3.h  fft3ia64.h  fft3sse2.h  fft3x86.h  fft5.h  fft5ia64.h  fft5sse2.h  fft5x86.h  fft7.h  fft7ia64.h  fft7sse2.h  fft7x86.h  generic.h  gio.c  glucas.c  glucas.h  gmp_yea.h  gsetup.c  gsetup.h  gstd.c  gthreads.c  gthreads.h  iteration.c  lucasini.c  macos-codewarrior-prefix.h  mccomp.h  (+73 more)
glucas-2.9.2/src/PaxHeaders.15315/: Glucas_test  Makefile.Glucas  Makefile.am  Makefile.in  cmpGlucas  compat.c  difdit_2.c  difdit_4.c  difdit_8.c  difditmm_4.c  difditmm_8.c  dyadic.c  dyadic32.c  fft3.h  fft3ia64.h  fft3sse2.h  fft3x86.h  fft5.h  fft5ia64.h  fft5sse2.h  fft5x86.h  fft7sse2.h  generic.h  gio.c  glucas.c  glucas.h  gmp_yea.h  gsetup.c  gsetup.h  gstd.c  gthreads.c  gthreads.h  iteration.c  lucasini.c  macos-codewarrior-prefix.h  mccomp.h  mccomplx.h  prefetch.h  radix_10.c  radix_14.c  (+54 more)
